<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="60dp"
	android:layout_marginEnd="8dp"
	android:layout_marginStart="8dp"
	android:layout_marginTop="20dp"
	android:background="@color/crypto_color"
	android:gravity="center"
	android:orientation="horizontal">

	<ImageView
		android:id="@+id/crypto_icon_1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="0.8"
		android:padding="10dp"
		tools:src="@tools:sample/avatars" />

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1.2"
		android:gravity="center_vertical"
		android:orientation="vertical">

		<TextView
			android:id="@+id/crypto_full_name_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="bottom"
			android:text="@string/full_name_of_crypto"
			android:textColor="@color/black"
			android:textSize="18dp"
			android:textStyle="bold"
			app:lineHeight="16dp" />

		<TextView
			android:id="@+id/crypto_name_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:text="@string/abbrev_name"
			android:textColor="@color/black" />

	</LinearLayout>
	<TextView
		android:id="@+id/crypto_price_1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/crypto_price"
		android:textColor="@color/black" />

	<TextView
		android:id="@+id/crypto_behaviour_1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="@string/last_behaviour_info"
		android:textColor="@color/black" />

</LinearLayout>