<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".features.stats.ui.StatsFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">


		<SearchView
			android:id="@+id/search_bar"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="25dp"
			android:background="@drawable/search_text_field_style"
			android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
			android:drawablePadding="8dp"
			android:drawableTint="@color/white"
			android:hint="@string/search"
			android:isScrollContainer="false"
			android:minHeight="48dp"
			android:padding="8dp"
			android:textColorHint="@color/white"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv"
			android:layout_width="match_parent"
			android:layout_height="300dp"
			app:layout_constraintTop_toBottomOf="@id/search_bar"
			tools:listitem="@layout/coin_layout_item" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="16dp"
			app:layout_constraintTop_toBottomOf="@id/rv">

			<com.google.android.material.imageview.ShapeableImageView
				android:id="@+id/coin_icon"
				android:layout_width="36dp"
				android:layout_height="36dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"

				tools:src="@drawable/ic_launcher_background" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_coin_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				app:layout_constraintStart_toEndOf="@id/coin_icon"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="Bitcoin" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_coin_symbol"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"

				app:layout_constraintStart_toEndOf="@id/coin_icon"
				app:layout_constraintTop_toBottomOf="@id/tv_coin_name"
				tools:text="btc" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_current_price_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/current_price"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_current_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"

				app:layout_constraintBottom_toTopOf="@+id/divider"
				app:layout_constraintEnd_toEndOf="parent"
				tools:text="$21234" />

			<com.google.android.material.divider.MaterialDivider
				android:id="@+id/divider"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				app:layout_constraintTop_toBottomOf="@id/tv_coin_symbol"
				tools:layout_editor_absoluteX="16dp" />

			<com.github.mikephil.charting.charts.LineChart
				android:id="@+id/lineChart"
				android:layout_width="match_parent"
				android:layout_height="400dp"
				android:layout_marginTop="8dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/divider" />

			<RadioGroup
				android:id="@+id/radio_group"
				android:layout_width="match_parent"
				android:textColor="@color/black"
				android:layout_height="wrap_content"
				android:checkedButton="@id/radio_button_7"
				android:gravity="center"
				android:orientation="horizontal"
				app:layout_constraintTop_toBottomOf="@id/lineChart">

				<RadioButton
					android:textColor="@color/black"
					android:id="@+id/radio_button_1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="8dp"
					android:text="@string/one_day" />

				<RadioButton
					android:textColor="@color/black"
					android:id="@+id/radio_button_7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="8dp"
					android:text="@string/seven_day" />

				<RadioButton
					android:textColor="@color/black"

					android:id="@+id/radio_button_14"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="8dp"
					android:text="@string/fourteen_day" />

				<RadioButton
					android:id="@+id/radio_button_30"
					android:layout_width="wrap_content"
					android:textColor="@color/black"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="8dp"
					android:text="@string/thirty_day" />

				<RadioButton
					android:id="@+id/radio_button_60"
					android:textColor="@color/black"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="8dp"
					android:text="@string/sixty_day" />
			</RadioGroup>

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_high_24h_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/price_high_24h"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/radio_group" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_low_24h_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:text="@string/price_low_24h"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@id/radio_group" />

			<com.google.android.material.divider.MaterialDivider
				android:id="@+id/divider_for_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tv_high_24h_label" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_high_24h"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"

				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/divider_for_price"
				tools:text="$21607" />

			<TextView
				android:textColor="@color/black"
				android:id="@+id/tv_low_24h"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"

				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@id/divider_for_price"
				tools:text="$20211" />
		</androidx.constraintlayout.widget.ConstraintLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>